--- a/src/lib/Timeline.scss
+++ b/src/lib/Timeline.scss
@@ -4,6 +4,7 @@ $item-border: 1px solid #1A6FB3;
 $item-selected-color: white;
 $item-selected-background: #FFC107;
 $item-selected-border: 1px solid #FF9800;
+$item-extra-background: #FF9800;
 
 $row-background-even: transparent;
 $row-background-odd: rgba(0,0,0,0.05);
@@ -45,7 +46,6 @@ $weekend: rgba(250, 246, 225, 0.5);
 
   .rct-items {
     .rct-item {
-      overflow: hidden;
       position: absolute;
       box-sizing: border-box;
       font-size: 12px;
@@ -129,10 +129,8 @@ $weekend: rgba(250, 246, 225, 0.5);
         height: 100%;
         padding: 0;
         margin: 0;
-        overflow: hidden;
 
         &:hover {
-          overflow: visible;
           z-index: 10;
         }
 
@@ -144,6 +142,19 @@ $weekend: rgba(250, 246, 225, 0.5);
           left: 0;
           padding: 0 6px;
           height: 100%;
+          width: 100%;
+
+          .rct-item-content-extra {
+            background-color: $item-extra-background;
+            margin: auto;
+          }
+
+          > p {
+            padding: 0;
+            margin: 0;
+            overflow: hidden;
+            text-overflow: "...";
+          }
         }
       }
     }
